[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Item Scripts/note.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/note.png" type="Texture" id=2]
[ext_resource path="res://Lights/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.4024

[node name="Note" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0160809, 0.149169 )
rotation = 0.79587
scale = Vector2( 0.0315447, 0.0397553 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -60.4546, 3.23705 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -0.44804, 0.26396 )
scale = Vector2( 0.675547, 0.558123 )
z_index = 2
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="Sprite2"]
position = Vector2( 16.177, -29.5653 )
scale = Vector2( 1.04377, 1.26808 )
z_index = 1
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Note_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Note_body_exited"]
